--- a/style.css
+++ b/style.css
@@ -184,7 +184,6 @@ h4{
 .footer{
     background-color: rgb(22, 22, 22);
     margin-top: -15px;
-    float: left; 
     overflow: hidden;
     padding: 15px;
     
@@ -200,6 +199,8 @@ h4{
     font-family: Arial, Helvetica, sans-serif, sans-serif;
     line-height: 200%;
     color: rgba(255, 255, 255, 0.856);
+    float: left;
+    margin-bottom: 10px;
 }
 
 .footer_content2{
