--- a/CCET/style.css
+++ b/CCET/style.css
@@ -72,7 +72,7 @@ td:hover {
   }
 table {
 	width: 800px;
-	border-collapse: collapse;
+	;
 	overflow: hidden;
 	background-color: #FFDAB9;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
