--- a/Chitkara/style.css
+++ b/Chitkara/style.css
@@ -69,16 +69,23 @@ h4{
   margin-left: auto;
   margin-right: auto;
   width: 80%;
+  border-radius: 20px;
 }
 table,th,td{
+    margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
-    border: 3px solid black;
+    
+    /* border-radius: 10px; */
+    border-color: black;
+    border-style: solid;
     /* text-align: center; */
     border-collapse: collapse;
     font-size: 20px;
     padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    /* color: white; */
 }
 
 /* reviews */
@@ -88,6 +95,7 @@ table,th,td{
     font-size: 20px;
     padding: 15px;
     margin: 15px;
+    
 }
 .reviews p{
     margin: 12px;
@@ -98,9 +106,12 @@ table,th,td{
 
 .reviews img{
     width: 100%;
+    border-radius: 20px;
 }
 
-
+body{
+    background-color: #FFDAB9;
+}
 /* footer */
 
 .footer{
