--- a/PEC/style.css
+++ b/PEC/style.css
@@ -1,56 +1,12 @@
 *{
-    padding: 0;
+  
     margin: 0;
-    text-decoration: none;
-}
-
-
-/* header */
-.header{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: #FFDAB9;
-    padding: 15px;
-    overflow: hidden;
-}
-
-h1{
-    color: brown;
-}
-
-h4{
-    color: #334756;
-}
-
-.logo{
-    float: right;
-    position: relative;
-    top: 0px;
-    width:20vh;
-}
-
-/* navbar */
-.navbar{
-    background-color: #333;
-    overflow: hidden;
-    
-}
-.navbar a{
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a:hover{
-    background-color: brown;
 }
 
 
 
-/* footer */
+
+ /*footer */
 
 .footer{
     background-color: rgb(22, 22, 22);
@@ -98,14 +54,16 @@ tbody{
 }
 .panel-heading,.heading2{
     
-   background-color: rgba(0, 0, 0, 0.726);
+   background-color: #333;
    color: white;
    padding: 5px 5px;
    padding-left: 15px;
   border-radius: 10px;
    margin-top: 10px;
-   margin-bottom: 2px;
+   margin-bottom: 20px;
+   height: 40px;
    text-align: center;
+   font-size: larger;
 }
 .table2{
   margin-left: auto;
