--- a/UIET/style.css
+++ b/UIET/style.css
@@ -7,7 +7,7 @@
 
 /* header */
 .header{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, 'Times New Roman', serif;
     background-color: #FFDAB9;
     padding: 15px;
     overflow: hidden;
@@ -64,7 +64,7 @@ body {
 	border: 2px;
     border-radius: 10px;
 	background: linear-gradient(90deg,#4568DC, #B06AB3);
-	box-shadow: 0 0 20px rgba(0,0,0,0.5);
+	box-shadow: 0 0 20px rgba(255,255,255,0.3);
 }
 
 .logos2
@@ -88,7 +88,7 @@ table {
 	width: 50%;
 	border-collapse: collapse;
 	overflow: hidden;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    box-shadow: 0 0 20px rgba(255,255,255,0.3);
 	margin:2%;
 	margin-left: 25%;
 	padding= 30px;
@@ -103,6 +103,11 @@ th {
 }
 td {
     position: relative;
+}
+
+img{
+	border-radius:10px;
+	box-shadow: 0 0 20px rgba(255,255,255,0.3);
 }
 
 /* footer */
