--- a/CU/stoile.css
+++ b/CU/stoile.css
@@ -7,14 +7,14 @@
 
 /* header */
 .header{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, 'Times New Roman', serif;
     background-color: #FFDAB9;
     padding: 15px;
     overflow: hidden;
 }
 
 h1{
-    color: brown;
+    color: rgb(61, 42, 165);
 }
 
 h4{
@@ -45,16 +45,76 @@ h4{
 }
 
 .navbar a:hover{
-    background-color: brown;
+    background-color: rgb(243, 215, 224);
+}
+/*Content*/
+body {
+	padding-top: 0%;
+	background: linear-gradient(90deg,#c33764, #1d2671);
+	font-family: sans-serif;
+	font-weight: 100;
+	color: white;
+	font-family: Times New Roman;
+	font-size: 110%;
+}
+.Intro
+{
+    padding: 30px;
+	margin: 2%;
+	border: 2px;
+    border-radius: 10px;
+	background: linear-gradient(90deg,#4568DC, #B06AB3);
+	box-shadow: 0 0 20px rgba(255,255,255,0.3);
 }
 
+.logos2
+{
+	padding:30px;
+    width: 160px;
+    height: 160px;
+    border-radius: 5%;
+    float:center;
+    margin-left: 44%;
+}
 
+th:hover {
+	
+  }
+
+td:hover {
+    
+  }
+table {
+	width: 50%;
+	border-collapse: collapse;
+	overflow: hidden;
+    box-shadow: 0 0 20px rgba(255,255,255,0.3);
+	margin:2%;
+	margin-left: 25%;
+	padding= 30px;
+	background: linear-gradient(90deg,#4568DC, #B06AB3);
+	border-radius: 10px;
+}
+th,td {
+	padding: 15px;
+}
+th {
+	text-align: top,center;
+}
+td {
+    position: relative;
+}
+
+img{
+	border-radius:10px;
+	box-shadow: 0 0 20px rgba(255,255,255,0.3);
+}
 
 /* footer */
 
 .footer{
     background-color: rgb(22, 22, 22);
-    margin-top: -15px;
+    margin-top: 15px;
     overflow: hidden;
     padding: 15px;
     
@@ -72,6 +132,7 @@ h4{
     color: rgba(255, 255, 255, 0.856);
     float: left;
     margin-bottom: 10px;
+	margin-left:560px;
 }
 
 .footer_content2{
